--- a/Hnefatafl/Hnefatafl.csproj
+++ b/Hnefatafl/Hnefatafl.csproj
@@ -28,5 +28,7 @@
     <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.0.1641"/>
     <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.0.1641"/>
     <PackageReference Include="Lidgren.Network" Version="1.0.2"/>
+    <PackageReference Include="MonoGame.Templates.CSharp" Version="3.8.0.1641"/>
+    <PackageReference Include="MonoGame.Extended.Content.Pipeline" Version="3.8.0"/>
   </ItemGroup>
 </Project>
